Not close bubble if the navigation is in-page

This CL updates ChromeBubbleManager::NavigationEntryCommitted to
not close the bubble when load_details.is_in_page is true.

BUG=614568

Review-Url: https://codereview.chromium.org/2451573004
Cr-Commit-Position: refs/heads/master@{#427849}

Former-commit-id: 189740490f79e9c04c4fb06f8f5bdf80e8af977d